--- a/RollingPaper/RollingPaper/RecoderController.xib
+++ b/RollingPaper/RollingPaper/RecoderController.xib
@@ -297,7 +297,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">RecoderViewController</string>
+				<string key="-1.CustomClassName">RecoderController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -340,7 +340,7 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">RecoderViewController</string>
+					<string key="className">RecoderController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">onTouchButton:</string>
@@ -366,7 +366,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RecoderViewController.h</string>
+						<string key="minorKey">./Classes/RecoderController.h</string>
 					</object>
 				</object>
 			</array>
