PaperViewController 의 델리게이터들 정리하고 PaperCreatorView의 버튼 및 이벤트 등등 정리

--- a/RollingPaper/RollingPaper/DockController.xib
+++ b/RollingPaper/RollingPaper/DockController.xib
@@ -41,6 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{-1, 58}, {50, 348}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -53,6 +54,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-24, 72}, {58, 62}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="827307220"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -91,6 +93,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-54, 142}, {91, 62}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1030624655"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,6 +119,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-54, 217}, {91, 62}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="904376874"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -138,6 +142,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-88, 287}, {125, 42}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="928954047"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -162,6 +167,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-88, 332}, {125, 42}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="698674236"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -182,9 +188,32 @@
 						<reference key="IBUIFontDescription" ref="595944559"/>
 						<reference key="IBUIFont" ref="976275876"/>
 					</object>
+					<object class="IBUIButton" id="34602164">
+						<reference key="NSNextResponder" ref="603674714"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{48, 58}, {21, 48}}</string>
+						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">Button</string>
+						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
+						<reference key="IBUIFontDescription" ref="595944559"/>
+						<reference key="IBUIFont" ref="976275876"/>
+					</object>
 				</array>
-				<string key="NSFrameSize">{54, 460}</string>
+				<string key="NSFrameSize">{69, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="261782342"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -205,6 +234,14 @@
 						<reference key="destination" ref="603674714"/>
 					</object>
 					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dockView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="698674236"/>
+					</object>
+					<int key="connectionID">68</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -251,6 +288,15 @@
 					</object>
 					<int key="connectionID">37</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">onTouchShowToggleButton:</string>
+						<reference key="source" ref="34602164"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">69</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -281,6 +327,7 @@
 							<reference ref="1030624655"/>
 							<reference ref="904376874"/>
 							<reference ref="928954047"/>
+							<reference ref="34602164"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -320,6 +367,11 @@
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="603674714"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">67</int>
+						<reference key="object" ref="34602164"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -332,6 +384,7 @@
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -340,9 +393,60 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">66</int>
+			<int key="maxID">69</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DockController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onTouchAlbum:">id</string>
+						<string key="onTouchCamera:">id</string>
+						<string key="onTouchKeyboard:">id</string>
+						<string key="onTouchMicrophone:">id</string>
+						<string key="onTouchPencilcase:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onTouchAlbum:">
+							<string key="name">onTouchAlbum:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchCamera:">
+							<string key="name">onTouchCamera:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchKeyboard:">
+							<string key="name">onTouchKeyboard:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchMicrophone:">
+							<string key="name">onTouchMicrophone:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchPencilcase:">
+							<string key="name">onTouchPencilcase:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">dockView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">dockView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">dockView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DockController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
